# pypackage-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml  versions.json
.github/: renovate.json
.github/workflows/: linting.yaml  lock.yaml  stale.yaml  sync-dependencies.yaml
scripts/: __init__.py  update_versions.py
template/: CONTRIBUTING.md.j2  LICENSE.j2  README.md.j2  pyproject.toml.j2
template/.github/: CODEOWNERS.j2  FUNDING.yml.j2  labels.yml
template/.github/ISSUE_TEMPLATE/: config.yml.j2
template/.github/workflows/: labels.yaml  linting.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml.j2  scoreboard.yaml  stale.yaml  sync-labels.yaml  tests.yaml  typing.yaml
template/src/{{package_name}}/: __init__.py.j2  exceptions.py.j2  models.py.j2  {{package_name}}.py.j2
template/test/: test_models.py.j2  test_{{package_name}}.py.j2
template/tests/: __init__.py.j2
