[project]
name = "pypackage-template"
description = "A template for generating a Python package"
authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["dependencies"]
packages = [
  { include = "template"},
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
codespell = "2.4.1"
copier = "9.6.0"
pre-commit = "4.1.0"
pre-commit-hooks = "5.0.0"
yamllint = "1.35.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
