[project]
name = "pypackage-template"
version = "0.1.0"
description = "A template for generating a Python package"
authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "copier>=9.8.0",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "codespell==2.4.1",
  "pre-commit==4.2.0",
  "pre-commit-hooks==5.0.0",
  "yamllint==1.37.1",
]

[tool.uv]
default-groups = []
